tests/rosetta/out/Smalltalk/array-concatenation.out
/tmp/array-concatenation.st:5: parse error, expected ']'
